...
    // Google ads
    private var interstitial: GADInterstitialAd?
    
    let defaults = UserDefaults.standard

    private var backButton: UIBarButtonItem!
    private var bookmarkButton: UIBarButtonItem!
    let context = (UIApplication.shared.delegate as? AppDelegate)?.persistentContainer.viewContext
    
    let fullArticleView = FullArticleView()
    var theArticle: Article?
    
    var delegate: FullNewsViewControllerDelegate?
...
    
    func setupNavigationBar() {
        guard let unwrappedNews = theArticle else {return}
        backButton = UIBarButtonItem(image: UIImage(named: "backArrow"), style: .plain, target: self, action: #selector(backButtonTapped))
        bookmarkButton = UIBarButtonItem(image: UIImage(named: "savedImage"), style: .plain, target: self, action: #selector(bookmarkButtonTapped))
        
        backButton.accessibilityIdentifier = "backArrowButton"
        bookmarkButton.accessibilityIdentifier = "bookmarkButton"
        
        backButton.tintColor = .white
        bookmarkButton.tintColor = unwrappedNews.isSaved ? .red : .white
        
        navigationItem.leftBarButtonItem = backButton
...
